--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,18 +33,18 @@ repositories {
 
 dependencies {
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
-    implementation('com.google.android.exoplayer:exoplayer:2.17.1') {
+    implementation('com.google.android.exoplayer:exoplayer:2.18.0') {
         exclude group: 'com.android.support'
     }
 
     // All support libs must use the same version
-    implementation "androidx.annotation:annotation:1.1.0"
-    implementation "androidx.core:core:1.1.0"
-    implementation "androidx.media:media:1.1.0"
+    implementation "androidx.annotation:annotation:1.4.0"
+    implementation "androidx.core:core:1.8.0"
+    implementation "androidx.media:media:1.6.0"
 
-    implementation('com.google.android.exoplayer:extension-okhttp:2.17.1') {
+    implementation('com.google.android.exoplayer:extension-okhttp:2.18.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
-    implementation 'com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}'
+    implementation "com.squareup.okhttp3:okhttp:4.9.2"
 
 }
